# graceful-ibus

./: CMakeLists.txt
app/: config.h
app/common/: common.cmake  gi-global.h  gi-log.c  ibus-functions.h  ibus-version.h
app/core/: core.cmake  gi-global.h  gi-log.c  gi-log.h  ibus-accel-group.c  ibus-accel-group.h  ibus-attribute-list.c  ibus-attribute-list.h  ibus-attribute.c  ibus-attribute.h  ibus-bus.c  ibus-bus.h  ibus-component.c  ibus-component.h  ibus-compose-table.c  ibus-compose-table.h  ibus-config-service.c  ibus-config-service.h  ibus-config.c  ibus-config.h  ibus-debug.h  ibus-emoji.c  ibus-emoji.h  ibus-engine-desc.c  ibus-engine-desc.h  ibus-engine-simple-private.h  ibus-engine-simple.c  ibus-engine-simple.h  ibus-engine.c  ibus-engine.h  ibus-enum-types.c  ibus-enum-types.h  ibus-error.c  ibus-error.h  ibus-factory.c  ibus-factory.h  ibus-hot-key.c  ibus-hot-key.h  ibus-input-context.c  ibus-input-context.h  (+44 more)
app/core/interface/: ibus-service.c  ibus-service.h
app/daemon/: CMakeLists.txt  component.c  component.h  connection.c  connection.h  dbusimpl.c  dbusimpl.h  engineproxy.c  engineproxy.h  factoryproxy.c  factoryproxy.h  global.c  global.h  ibus.h  ibusaccelgroup.h  ibusattribute.h  ibusattrlist.h  ibusconfig.c  ibusconfigservice.lo  ibusemoji.c  ibusemoji.h  ibusengine.h  ibusenumtypes.c  ibusenumtypes.c.template  ibuserror.c  ibusfactory.h  ibushotkey.h  ibusimpl.c  ibusimpl.h  ibusinputcontext.c  ibuskeymap.c  ibuskeymap.h  ibuskeyuni.c  ibuslookuptable.c  ibuslookuptable.h  ibusmarshalers.h  ibusobject.h  ibusobservedpath.c  ibusobservedpath.h  ibusobservedpath.lo  (+24 more)
app/portal/: CMakeLists.txt  main.c
bus/: CMakeLists.txt  marshalers.c  marshalers.h  test-client.c  test-client.h  test-stress.c
client/gtk2/: ibusim.c  ibusimcontext.c
client/gtk4/: ibusim.c
client/wayland/: main.c
client/x11/: main.c
conf/dconf/: config-private.h  config.c  main.c
conf/gconf/: config.c  config.h  main.c
conf/memconf/: config.c  config.h  main.c
portal/: portal.c
src/: gencomposetable.c  ibusbus.c  ibusmarshalers.c  ibusresources.c  ibusresources.h  ibusshare.c  ibusversion.h
src/tests/: ibus-configservice.c  ibus-factory.c  ibus-registry.c  ibus-share.c
